# EduXRL

./: .gitignore  README.md  validate-submission.sh
eduxrl/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
eduxrl/graders/: learning_grader.py
eduxrl/server/: Dockerfile  __init__.py  app.py  curriculum.py  dashboard.py  eduxrl_environment.py  learning_environment.py  learning_grader.py  student_model.py  task_definitions.py
eduxrl/tasks/: task1_steady_learner.py  task2_struggling_student.py  task3_forgetting_student.py
